corrected structure for bootstrap in ABOUT and HEADER, adjusted spacing in ABOUT and HEADER

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 }
 
 body{
-    background-color: rgb(86, 88, 88);
+    background-color: rgb(250, 250, 250);
     color: rgb(243, 242, 202);
 }
 
@@ -16,6 +16,14 @@ h1{
 h3{
     font-family: 'Ceviche One', cursive;
     font-size: 60pt;
+}
+
+p{
+    font-size: 18px;
+}
+
+.text-box{
+    
 }
 
 .navbar{
@@ -41,6 +49,7 @@ h3{
 
 #header-container{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     /* background-color: darkgray; */
@@ -53,20 +62,34 @@ h3{
 }
 
 #header-container h3{
-    font-size: 36pt;
-    margin-top: -38px;
+    font-size: 74pt;
+    margin-top: -50px;
 }
 
+.welcomehead{
+    align-self: flex-start;
+    margin-bottom: 10px;
+}
+
+.dinerhead{
+
+}
+
+.subhead{
+    align-self: flex-end;
+}
 
 #about{
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    width: 40%;
-    /* background-color:chocolate; */
+    color: rgb(228, 152, 13);
+    background-color:chocolate;
 
+}
+
+.about-text-box{
+    padding: 200px 0px;
 }
 
 #menu{
@@ -79,9 +102,12 @@ h3{
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 40vh;
     width: 40%;
     /* background-color:rgb(185, 85, 13); */
+}
+
+#form-container{
+    background-color: rgb(4, 160, 113);
 }
 
 #form h3{
@@ -97,6 +123,7 @@ h3{
     display: flex;
     justify-content: space-evenly;
     height: 50px;
+    background-color: rgb(4, 160, 113);
     /* background-color: brown; */
     
 }
